// file: pkg/db/proto/responses/execute_response.proto
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/any.proto";
import "pkg/common/proto/error.proto";
import "pkg/db/proto/execute_stats.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * ExecuteResponse contains the results of a database execute operation.
 * Includes affected row count, generated keys, and execution statistics.
 */
message ExecuteResponse {
  // Number of rows affected by the operation
  int64 affected_rows = 1;

  // Generated keys from INSERT operations
  repeated google.protobuf.Any generated_keys = 2 [lazy = true];

  // Execution statistics and performance metrics
  ExecuteStats stats = 3 [lazy = true];

  // Error information if the operation failed
  gcommon.v1.common.Error error = 4 [lazy = true];
}
