// file: proto/gcommon/v1/database/enums/isolation_level.proto
// version: 1.0.0
// guid: 004cde4c-f6bc-40ff-b341-1408e58e37b6
edition = "2023";

package gcommon.v1.database;


import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/database";

/**
 * IsolationLevel defines transaction isolation levels controlling concurrent access.
 * Balances data consistency with concurrency performance.
 */
enum DatabaseIsolationLevel {
  // Default unspecified isolation level
  ISOLATION_LEVEL_UNSPECIFIED = 0;

  // Read uncommitted - allows dirty reads, lowest isolation
  ISOLATION_LEVEL_READ_UNCOMMITTED = 1;

  // Read committed - prevents dirty reads, allows non-repeatable reads
  ISOLATION_LEVEL_READ_COMMITTED = 2;

  // Repeatable read - prevents dirty and non-repeatable reads
  ISOLATION_LEVEL_REPEATABLE_READ = 3;

  // Serializable - highest isolation, prevents all phenomena
  ISOLATION_LEVEL_SERIALIZABLE = 4;
}
