// file: proto/gcommon/v1/database/config/begin_transaction_request.proto

edition = "2023";

package gcommon.v1.database.config;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/request_metadata.proto";
import "proto/gcommon/v1/database/messages/transaction_options.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/database/messages";

message BeginTransactionRequest {
  // Database name (optional, uses default if not specified)
  string database = 1;

  // Transaction configuration options
  TransactionOptions options = 2 [lazy = true];

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
