// file: proto/gcommon/v1/queue/api/import_queue_response.proto
// file: proto/gcommon/v1/queue/import_queue_response.proto
// version: 1.0.0
// guid: 5d4c3b2a-1f0e-9d8c-7b6a-5e4f3a2b1c0d
//
// Response definitions for queue module
//
edition = "2023";

package queue.v1;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/";

/**
 * Response message for queue import operations.
 */
message ImportQueueResponse {
  // Unique identifier for the import operation
  string import_id = 1 [(buf.validate.field).string.min_len = 1];

  // Whether the import was successful
  bool success = 2;

  // Error message if import failed
  string error_message = 3 [(buf.validate.field).string.min_len = 1];

  // Number of messages imported
  uint64 imported_count = 4 [(buf.validate.field).uint64.gte = 0];

  // Number of messages that failed to import
  uint64 failed_count = 5 [(buf.validate.field).uint64.gte = 0];

  // Total number of messages processed
  uint64 total_count = 6 [(buf.validate.field).uint64.gte = 0];

  // Timestamp when import started
  google.protobuf.Timestamp start_time = 7;

  // Timestamp when import completed
  google.protobuf.Timestamp end_time = 8;

  // Import duration in milliseconds
  uint64 duration_ms = 9 [(buf.validate.field).uint64.gte = 0];

  // Import progress as percentage (0-100)
  float progress_percent = 10 [(buf.validate.field).float.gte = 0.0, (buf.validate.field).float.lte = 100.0];
}
